-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
None
-
xlib and xcb have been tested. I don't have a Windows system to play with- but if the underlying plugin works, the program will work properly.
-
4a80a7ced1f643a6794f6550d01c1fe60295a21c
This is a draft- we might want the output to appear in the window, rather than QtDebug to a console.
It provides an "xev"-like functionality, for users to identify their high-numbered mouse buttons.
(It answers the question, "Which one is BackButton, and which one is ForwardButton?" In doing so, it also demonstrates how to create code blocks which are specific to each button. Simple, short program; it doesn't demonstrate anything else.
For Gerrit Dashboard: QTBUG-24112 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
15446,11 | add widget mousebuttons example 'mousetester'. | master | qt/qtbase | Status: MERGED | +2 | 0 |