examples/widgets/mousebuttons/buttontester.cpp
@@ -1,0 +1,6 @@
+DECL|function|buttonByNumber
+DECL|function|enumNameFromValue
+DECL|function|mouseDoubleClickEvent
+DECL|function|mousePressEvent
+DECL|function|mouseReleaseEvent
+DECL|function|wheelEvent
