examples/widgets/widgets.pro
@@ -12,6 +12,7 @@ SUBDIRS       = analogclock \
                 imageviewer \
                 lineedits \
                 movie \
+                mousebuttons \
                 orientation \
                 scribble \
                 shapedclock \
